style: fix alignment of date column in income section

--- a/src/renderer/styles/main.css
+++ b/src/renderer/styles/main.css
@@ -557,7 +557,8 @@ body {
 }
 
 .header-date {
-    text-align: center;
+    text-align: right;
+    padding-right: 40px;
 }
 
 .header-description {
@@ -582,7 +583,8 @@ body {
 }
 
 .income-dates {
-    text-align: center;
+    text-align: right;
+    padding-right: 20px;
     font-size: 11px;
 }
 
